# basmati

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: publish.yml  release.yml  test.yml
src/: create.rs  delete_archive.rs  download.rs  inventory.rs  list_vaults.rs  main.rs  multipart_upload.rs  shared.rs
