[package]
name = "bunjabi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
aws-sdk-glacier = "1.9.0"
aws-smithy-types = "1.1.1"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.1.0"
hex = "0.4.3"
regex = "1.10.2"
sha256 = "1.5.0"
tokio = { version = "1.35.1", features = ["full"] }
