
[package]
name = "basmati"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
aws-config = "1.1.1"
aws-sdk-glacier = "1.9.0"
aws-smithy-client = "0.60.2"
aws-smithy-http = "0.60.2"
aws-smithy-types = "1.1.1"
bytes = "1.5.0"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.27.0"
hex = "0.4.3"
home = "0.5.9"
ratatui = "0.25.0"
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha256 = "1.5.0"
tokio = { version = "1.35.1", features = ["full"] }
